# srgge

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  Scene.cpp  Scene.h  main.cpp
BaseCodeWithText/: 1.map  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  LOD.cpp  LOD.h  Map.cpp  Map.h  Map.h.gch  MapParser.cpp  Octree.cpp  Octree.h  Scene.cpp  Scene.h  TimeCriticalRendering.cpp  TimeCriticalRendering.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp  trimesh.cpp
BaseCodeWithText/maps/: 1.map  2.map  3.map
BaseCodeWithText/shaders/: basic.frag
BaseCodeWithText/visibility/: CMakeLists.txt  Map.h  main.cpp
BaseCodeWithText/visibility/results/: 1.vis  2.vis  3.vis
shaders/: basic.vert
